internal/xds/translator/testdata/out/xds-ir-sublinear/http-route-response-add-headers.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: response-header-route
      responseHeadersToAdd:
      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
        header:
          key: some-header-multi-value
          value: some-value,some-additional-value
      - header:
          key: some-header
          value: some-value
      - header:
          key: some-header-2
          value: some-value
      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
        header:
          key: some-header3
          value: some-value
      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
        header:
          key: some-header4
          value: some-value
      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
        header:
          key: empty-header
        keepEmptyValue: true
      - appendAction: ADD_IF_ABSENT
        header:
          key: add-if-absent-header
          value: default-value
      route:
        cluster: response-header-route-dest
        upgradeConfigs:
        - upgradeType: websocket
